--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,11 @@ version: "3.9"
 services:
   database:
     image: postgres
-    container_name: database_ink
+    container_name: database_sistema
     ports:
-      - 5423:5432
-    environment:
-      - POSTGRES_USER=docker
-      - POSTGRES_PASSWORD=sistemasdesafios
-      - POSTGRES_DB=sistemadesafios
+      - 5432:5432
+    env_file:
+      - .env.development
     volumes:
       - pgdata:/data/postgres
 
