--- a/package.json
+++ b/package.json
@@ -8,20 +8,29 @@
     "dev": "npm run services:up && npm run ts-dev:watch",
     "services:up": "docker compose up -d",
     "services:down": "docker compose down",
-    "services:stop": "docker compose stop"
+    "services:stop": "docker compose stop",
+    "test": "jest --verbose",
+    "test:watch": "npm test -- --watch --detectOpenHandles",
+    "test:only": "npm run test:watch -- --testPathPattern='get-user-profile-controller.spec.ts'",
+    "test:staged": "npm test -- --findRelatedTests",
+    "test:coverage": "npm test -- --coverage"
+
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.11",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "eslint": "^8.56.0",
     "eslint-config-standard-with-typescript": "^43.0.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.1.1",
+    "jest": "^29.7.0",
     "prisma": "^5.7.1",
+    "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
   },
