--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,8 @@
     "@typescript-eslint/no-namespace": "off",
     "@typescript-eslint/return-await": "off",
     "@typescript-eslint/no-misused-promises": "off",
-    "@typescript-eslint/require-array-sort-compare": "off"
+    "@typescript-eslint/require-array-sort-compare": "off",
+    "@typescript-eslint/unbound-method": "off",
+    "@typescript-eslint/no-extraneous-class": "off"
   }
 }
