--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "test:only": "npm run test:watch -- --testPathPattern='get-user-profile-controller.spec.ts'",
     "test:staged": "npm test -- --findRelatedTests",
     "test:coverage": "npm test -- --coverage"
-
   },
   "keywords": [],
   "author": "",
@@ -22,6 +21,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
+    "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "eslint": "^8.56.0",
     "eslint-config-standard-with-typescript": "^43.0.0",
@@ -30,6 +30,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "jest": "^29.7.0",
     "prisma": "^5.7.1",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3"
@@ -38,6 +39,7 @@
     "@prisma/client": "^5.7.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "node-pg-migrate": "^6.2.2",
     "pg": "^8.11.3"
   }
