--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "services:up": "docker compose up -d",
     "services:down": "docker compose down",
     "services:stop": "docker compose stop",
-    "test": "jest --verbose",
+    "test": "npm run services:up && jest --verbose",
     "test:watch": "npm test -- --watch --detectOpenHandles",
     "test:only": "npm run test:watch -- --testPathPattern='get-user-profile-controller.spec.ts'",
     "test:staged": "npm test -- --findRelatedTests",
@@ -19,6 +19,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
     "@types/supertest": "^6.0.2",
@@ -37,9 +38,12 @@
   },
   "dependencies": {
     "@prisma/client": "^5.7.1",
+    "@types/jsonwebtoken": "^9.0.5",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.2",
     "node-pg-migrate": "^6.2.2",
     "pg": "^8.11.3"
   }
