--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
     "@phosphor-icons/react": "^2.0.15",
     "next": "14.0.4",
     "react": "^18",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18"
   },
   "devDependencies": {
