--- a/web/package.json
+++ b/web/package.json
@@ -17,18 +17,19 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.23.0",
-    "@babel/core": "^7.23.2",
+    "@babel/core": "^7.23.9",
     "@babel/node": "^7.22.19",
+    "@babel/plugin-proposal-decorators": "^7.23.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5",
-    "babel-plugin-module-resolver": "^5.0.0",
-    "babel-plugin-transform-typescript-metadata": "^0.3.2"
+    "typescript": "^5"
   }
 }
