--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,8 @@
     "test:staged": "npm test -- --findRelatedTests",
     "test:coverage": "npm test -- --coverage",
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files",
-    "seed:admin": "ts-node-dev -r tsconfig-paths/register src/database/seed/admin.ts"
+    "seed:admin": "ts-node-dev -r tsconfig-paths/register src/database/seed/admin.ts",
+    "seed:removeAdmin": "ts-node-dev -r tsconfig-paths/register src/database/seed/admin.ts"
   },
   "keywords": [],
   "author": "",
