--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -17,6 +17,7 @@ jobs:
       - name: Setup Nodejs
         uses: actions/setup-node@v4
         with:
+          sparse-checkout: .
           node-version: 20
       
       - name: Install dependencies
