--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -1,4 +1,3 @@
-
 name: CI
 
 on:
@@ -15,10 +14,9 @@ jobs:
       - uses: actions/checkout@v4
       
       - name: Setup Nodejs
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v3
         with:
-          sparse-checkout: .
-          node-version: 20
+          node-version: 'lts/Hydrogen'
       
       - name: Install dependencies
         run: npm i
@@ -33,7 +31,7 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           key: ${{ secrets.SSH_KEY }}
           source: "., !node_modules"
-          target: "~/app/sistema-desafios/backend"
+          target: "~/app/sistema-desafios"
 
       - name: Update API
         uses: appleboy/ssh-action@master
@@ -43,7 +41,7 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           key: ${{ secrets.SSH_KEY }}
           script: |
-            cd ~/app/sistema-desafios/backend
+            cd ~/app/sistema-desafios
             export NVM_DIR=~/.nvm
             source ~/.nvm/nvm.sh 
             npm i
