--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -31,7 +31,7 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           key: ${{ secrets.SSH_KEY }}
           source: "., !node_modules"
-          target: "~/app/sistema-desafios"
+          target: "~/app/sistema-desafios/backend"
 
       - name: Update API
         uses: appleboy/ssh-action@master
@@ -41,7 +41,7 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           key: ${{ secrets.SSH_KEY }}
           script: |
-            cd ~/app/sistema-desafios
+            cd ~/app/sistema-desafios/backend
             export NVM_DIR=~/.nvm
             source ~/.nvm/nvm.sh 
             npm i
